@@ -5,6 +5,6 @@
 # License: MIT
 
  
-__version__ = "0.0.19"
+__version__ = "0.0.20"
 
 __license__ = "MIT"
